# boomerang

./: .gitignore  .travis.yml  Example.lhs  LICENSE  README.md  boomerang.cabal  default.nix  shell.nix
.github/workflows/: haskell-ci.yml
Text/: Boomerang.hs
Text/Boomerang/: Combinators.hs  Error.hs  HStack.hs  Pos.hs  Prim.hs  Regular.hs  String.hs  Strings.hs  TH.hs  Texts.hs  scratch.hs
