Name:             boomerang
Version:          1.4.9.1
License:          BSD3
License-File:     LICENSE
Author:           jeremy@seereason.com
Maintainer:       partners@seereason.com
Bug-Reports:      https://github.com/Happstack/boomerang/issues
Category:         Parsing, Text
Synopsis:         Library for invertible parsing and printing
Description:      Specify a single unified grammar which can be used for parsing and pretty-printing
Cabal-Version:    >= 1.10
Build-type:       Simple
tested-with:      GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC==9.2.5, GHC==9.4.8, GHC==9.6.4

Library
        Default-Language: Haskell2010
        Build-Depends:    base             >= 4    && < 5,
                          mtl              >= 2.0  && < 2.4,
                          semigroups       >= 0.16 && < 0.21,
                          template-haskell            < 2.21,
                          text             >= 0.11 && < 2.2,
                          th-abstraction   >= 0.4  && < 0.7
        Exposed-Modules:  Text.Boomerang
                          Text.Boomerang.Combinators
                          Text.Boomerang.Error
                          Text.Boomerang.HStack
                          Text.Boomerang.Pos
                          Text.Boomerang.Prim
                          Text.Boomerang.String
                          Text.Boomerang.Strings
                          Text.Boomerang.Texts
                          Text.Boomerang.TH

        Other-Extensions:
                          DeriveDataTypeable,
                          FlexibleContexts,
                          FlexibleContexts,
                          FlexibleInstances,
                          RankNTypes,
                          ScopedTypeVariables,
                          TemplateHaskell,
                          TypeFamilies,
                          TypeFamilies,
                          TypeOperators,
                          TypeSynonymInstances

source-repository head
    type:     git
    location: https://github.com/Happstack/boomerang.git
